<resources>
    <string name="app_name">Book Buddy</string>

    <!-- Drawer Navigation -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_search_books">Search Books</string>
    <string name="nav_bookshelves">Bookshelves</string>
    <string name="nav_to_read">To Read</string>
    <string name="nav_currently_reading">Currently Reading</string>
    <string name="nav_read">Read</string>
    <string name="nav_all_shelves">All Shelves</string>
    <string name="nav_login">Login</string>
    <string name="nav_logout">Logout</string>

    <!-- Main Activity -->
    <string name="add_account_instructions">
        Login to Goodreads account \n to access all features.
    </string>
    <string name="account_login">Login</string>
    <string name="account_skip">Skip</string>
    <string name="snackbar_login_error">Unfortunately an error occurred logging in.</string>

    <string name="account_continue">Continue</string>
    <string name="account_result_success">Login successful.</string>
    <string name="account_result_cancel">Login cancelled.</string>

    <!-- Search Activity -->
    <string name="content_description_books">Image of book pile</string>
    <string name="search_hint">Title / Author / ISBN</string>
    <string name="search_message">Search books by title, author \n or ISBN number.</string>
    <string name="snackbar_load_error">Unfortunately an error occurred loading results.</string>

    <!-- Book Activity -->
    <string name="content_description_book">Image of book</string>
    <string name="book_description_title">Book Description</string>
    <string name="book_edition_details_title">Edition Details</string>
    <string name="snackbar_added">Book added to shelf.</string>
    <string name="snackbar_removed">Book removed from shelf.</string>
    <string name="snackbar_error">Unfortunately an error occurred.</string>

    <!-- Shelf Activity -->
    <string name="rating_title">My rating:</string>
    <string name="review_title">My review:</string>
    <string name="button_show_book">Show Book</string>
    <string name="filter_hint">Filter by title or author...</string>

    <!-- Error messages for SnackBars -->
    <string name="results_loading_error">Unfortunately an error occurred loading results.</string>
    <string name="http_books_search_error">Unfortunately an error occurred searching books.</string>

</resources>
