<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>
        <item
            android:icon="@android:drawable/ic_menu_search"
            android:id="@+id/nav_search_books"
            android:title="@string/nav_search_books" />
    </group>

    <item android:title="@string/nav_bookshelves">
        <menu>
            <group>
                <item
                    android:icon="@drawable/to_read"
                    android:id="@+id/nav_to_read"
                    android:title="@string/nav_to_read" />
                <item
                    android:icon="@drawable/currently_reading"
                    android:id="@+id/nav_reading"
                    android:title="@string/nav_currently_reading" />
                <item
                    android:icon="@drawable/read"
                    android:id="@+id/nav_read"
                    android:title="@string/nav_read" />
                <item
                    android:icon="@drawable/all_shelves"
                    android:id="@+id/nav_bookshelves"
                    android:title="@string/nav_all_shelves" />
            </group>
        </menu>
    </item>

</menu>
