<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/book_reading" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        android:orientation="vertical">

        <TextView
            android:text="@string/app_name"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Display1"
            android:textColor="@android:color/primary_text_light"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView_loginInstructions"
            android:text="@string/add_account_instructions"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/tertiary_text_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_margin="12dp"/>

        <!-- While loading -->
        <ProgressBar
            android:id="@+id/progressBarLogin"
            style="?android:attr/progressBarStyleLarge"
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />

        <!-- If logged in -->
        <TextView
            android:id="@+id/textView_loginSuccess"
            android:text="@string/account_result_success"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/tertiary_text_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_margin="12dp"
            android:visibility="gone"/>

        <Button
            android:id="@+id/button_continue"
            android:onClick="continueToApp"
            android:text="@string/account_continue"
            style="@style/Widget.AppCompat.Button.Colored"
            android:background="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="12dp"
            android:visibility="gone"/>

        <!-- If cancelled login -->
        <TextView
            android:id="@+id/textView_loginCancel"
            android:text="@string/account_result_cancel"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/tertiary_text_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_margin="12dp"
            android:visibility="gone"/>

        <LinearLayout
            android:id="@+id/layout_loginButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <Button
                android:id="@+id/button_login"
                android:onClick="login"
                android:text="@string/account_login"
                style="@style/Widget.AppCompat.Button.Colored"
                android:background="@color/colorPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"/>

            <Button
                android:id="@+id/button_skip"
                android:onClick="continueToApp"
                android:text="@string/account_skip"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
